导入黄油刀

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,4 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/tv_splash_timer"
+        android:textSize="@dimen/dp_18"
+        android:textColor="@color/colorWhite"
+        android:layout_gravity="right"
+        android:gravity="center"
+        android:layout_width="@dimen/dp_90"
+        android:layout_marginTop="@dimen/dp_25"
+        android:layout_marginRight="@dimen/dp_25"
+        android:background="@drawable/shape_splash"
+        android:layout_height="wrap_content"
+        android:text="@string/tiaoguo"
+        />
+
 </FrameLayout>
