--- a/app/src/main/res/layout/activity_kang.xml
+++ b/app/src/main/res/layout/activity_kang.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".KangActivity">
+    tools:context=".main.KangActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
