--- a/app/src/main/res/layout/content_kang.xml
+++ b/app/src/main/res/layout/content_kang.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".KangActivity"
+    tools:context=".main.KangActivity"
     tools:showIn="@layout/activity_kang">
 
     <TextView
