--- a/app/src/main/res/layout/item_shanghai_fragment.xml
+++ b/app/src/main/res/layout/item_shanghai_fragment.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
+        <ImageView
+            android:id="@+id/item_shanghai_iv"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/shanghai2"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
         <TextView
             android:id="@+id/item_shanghai_tv"
@@ -18,4 +24,4 @@
             android:layout_height="50dp" />
 
 
-</RelativeLayout>
+</LinearLayout>
