58课时7min47s，增加了泛型参数，准备连接http与task两个module

--- a/app/src/main/res/layout/activity_shanghai_detail.xml
+++ b/app/src/main/res/layout/activity_shanghai_detail.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/iv_shanghai_detail"
+        android:id="@+id/tang_shanghai_detail"
         android:transitionName="ShanghaiDetailActivity"
         android:scaleType="centerCrop"
         android:src="@mipmap/shanghai"
