58课时结束,nullpoint空指针终于解决(instance判空的"=="写成了"!=",粗心导致,以及不会debug),以后认真看报错,不要慌不要盲目

--- a/app/src/main/res/layout/fragment_shanghai.xml
+++ b/app/src/main/res/layout/fragment_shanghai.xml
@@ -22,7 +22,7 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.6"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/shanghai2"
+                android:src="@mipmap/shanghai"
                 android:layout_width="match_parent"
                 android:layout_height="200dp" />
 
