--- a/app/src/main/res/layout/fragment_hangzhou.xml
+++ b/app/src/main/res/layout/fragment_hangzhou.xml
@@ -14,7 +14,7 @@
         app:tabIndicatorColor="@color/colorPrimary"
         app:tabIndicatorHeight="2dp"
         app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabMode="scrollable"
+        app:tabMode="fixed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
