75课时13:31结束,添加Littie控件,下拉刷新（未完成）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,26 +29,48 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50" >
 
-        <RadioGroup
+        <LinearLayout
+            android:gravity="center_vertical"
             android:id="@+id/rg_main_top"
             android:orientation="horizontal"
-            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <RadioButton
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/rb_main_shanghai"
-                android:text="@string/str_main_shanghai"
-                android:drawableTop="@drawable/selector_main_top_tab_shanghai"
-                style="@style/main_tab_rb_style" />
-
-            <RadioButton
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:lottie_fileName="lottie/shanghai.json" />
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/rb_main_hangzhou"
-                android:text="@string/str_main_hangzhou"
-                android:drawableTop="@drawable/selector_main_top_tab_hangzhou"
-                style="@style/main_tab_rb_style" />
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:lottie_fileName="lottie/hangzhou.json" />
 
-        </RadioGroup>
+        </LinearLayout>
+
+<!--        <RadioGroup-->
+<!--            android:id="@+id/rg_main_top"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+
+<!--            <RadioButton-->
+<!--                android:id="@+id/rb_main_shanghai"-->
+<!--                android:text="@string/str_main_shanghai"-->
+<!--                android:drawableTop="@drawable/selector_main_top_tab_shanghai"-->
+<!--                style="@style/main_tab_rb_style" />-->
+
+<!--            <RadioButton-->
+<!--                android:id="@+id/rb_main_hangzhou"-->
+<!--                android:text="@string/str_main_hangzhou"-->
+<!--                android:drawableTop="@drawable/selector_main_top_tab_hangzhou"-->
+<!--                style="@style/main_tab_rb_style" />-->
+
+<!--        </RadioGroup>-->
 
         <RadioGroup
             android:id="@+id/rg_main_bottom"
