--- a/app/src/main/res/layout/fragment_refresh.xml
+++ b/app/src/main/res/layout/fragment_refresh.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.tuoren.refresh.GodRefreshLayout
+        android:id="@+id/god_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="测试文本" />
+
+    </com.tuoren.refresh.GodRefreshLayout>
 
 </LinearLayout>
