--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="color_black_30">#B2000000</color>
     <color name="color_ADADAD">#ADADAD</color>
     <color name="color_FF7F1D">#FF7F1D</color>
+    <color name="hard_color">#48495f</color>
 </resources>
