--- a/app/src/main/res/layout/activity_shanghai_detail.xml
+++ b/app/src/main/res/layout/activity_shanghai_detail.xml
@@ -11,4 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
+    <TextView
+        android:id="@+id/tv_crash"
+        android:gravity="center"
+        android:text="子线程崩溃"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
+
 </LinearLayout>
