--- a/app/src/main/res/layout/fragment_shanghai.xml
+++ b/app/src/main/res/layout/fragment_shanghai.xml
@@ -27,29 +27,50 @@
                 android:layout_height="200dp" />
 
             <androidx.appcompat.widget.Toolbar
+                app:contentInsetStart="0dp"
                 app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize">
 
-                <TextView
-                    android:id="@+id/tv_shanghai_welcome"
-                    android:textColor="@color/colorWhite"
-                    android:visibility="gone"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="上海欢迎您"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:background="@drawable/shape_splash"
+                        android:id="@+id/tv_shanghai_welcome"
+                        android:textColor="@color/colorWhite"
+                        android:layout_gravity="center"
+                        android:layout_centerInParent="true"
+                        android:text="今日播报"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <com.tuoren.splash.main.shanghai.view.MarqueeTextView
+                        android:id="@+id/tv_marquee_title"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:text="目前播放的歌曲是：I know you were trouble"
+                        android:ellipsize="marquee"
+                        android:singleLine="true"
+                        android:textSize="15dp"
+                        android:textColor="@color/color_FF7F1D"
+                        android:layout_marginLeft="10dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/tv_shanghai_welcome"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <TextView
-            android:textColor="@color/colorWhite"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="我是可以停留的"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
+<!--        <TextView-->
+<!--            android:textColor="@color/colorWhite"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center"-->
+<!--            android:text="我是可以停留的"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp" />-->
 
     </com.google.android.material.appbar.AppBarLayout>
 
