13章119课时结束,播放音频框架搭载完成，实现本地音频播放

--- a/app/src/main/res/layout/fragment_shanghai.xml
+++ b/app/src/main/res/layout/fragment_shanghai.xml
@@ -50,7 +50,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:marqueeRepeatLimit="marquee_forever"
-                        android:text="目前播放的歌曲是：I know you were trouble"
+                        android:text="目前播放的歌曲是：Maxone on the way pt.3"
                         android:ellipsize="marquee"
                         android:singleLine="true"
                         android:textSize="15dp"
